# whisper_ui

./: .gitignore  CMakeLists.txt  PaintSpectrum.cpp  PaintSpectrum.h  WContainer.cpp  WContainer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  whisperstream.cpp  whisperstream.h
3rd/SDL/cmake/: SDL2ConfigVersion.cmake
3rd/SDL/include/SDL2/: SDL_revision.h
3rd/SDL/lib/: SDL2_test.lib  SDL2main.lib
3rd/SDL/lib/pkgconfig/: sdl2.pc
3rd/whisper/: CMakeLists.txt
whisper/: CMakeLists.txt
